riesenie bez nepodporovaneho getLast()